MFB: Fixed bug #43981 (gmp_div_r() does not preserve the sign of 1st argument)